test/custom_configs/bad/006-UnknownMode.h
// clang-format off
#define TIMER_MODES       \
    UnknownMode,          \
    linearTest,           \
    print,                \
    mask,                 \
    splitGradeMask,       \
    expertFStopTest,      \
    expertLinearTest,     \
    last_,                \
    localizedFStopTest,   \
    localizedLinearTest,  \
    splitGradeFStopTest,  \
    splitGradeLinearTest, \
    relMask,              \
    splitGradeRelMask
// clang-format on
